kubernetes/ingress/flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: flask-ingress
  namespace: aqra
spec:
  ingressClassName: nginx
  rules:
    - host: aqra.feit.ukim.edu.mk
      http:
        paths:
          - backend:
              service:
                name: flask
                port:
                  number: 80
            path: /api
            pathType: Prefix
  tls:
    - hosts:
        - aqra.feit.ukim.edu.mk
      secretName: aqra-tls
